--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "statamic/statamic",
     "description": "Statamic",
-    "keywords": ["statamic", "cms", "flat file", "laravel"],
+    "keywords": ["statamic", "cms", "flat file", "laravel", "vuejs"],
     "type": "project",
     "require": {
         "php": "^7.3 || ^8.0",
