--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@vue/compiler-sfc": "^3.0.5",
         "autoprefixer": "^9.7.6",
         "cross-env": "^5.1",
         "laravel-mix": "^6.0.10",
@@ -18,9 +19,11 @@
         "postcss-nested": "5.0.3",
         "postcss-preset-env": "^6.7.0",
         "tailwindcss": "^2.0.2",
+        "vue-loader": "^16.1.2",
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
-        "lodash": "^4.17.20"
+        "lodash": "^4.17.20",
+        "vue": "^3.0.5"
     }
 }
