--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     },
     "dependencies": {
         "lodash": "^4.17.20",
-        "vue": "^3.0.5"
+        "vue": "^3.0.5",
+        "vue-router": "^4.0.0-0",
+        "vuex": "^4.0.0-0"
     }
 }
